# photon-mosaic-pipeline

./: .gitattributes  CNAME  MANIFEST.in  README.md  api_index.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs_build_and_deploy.yml  sync-upstream.yml
_modules/: index.html
_modules/photon_mosaic/: cli.html  logging_config.html  paths_selection.html  snakemake_utils.html
_modules/photon_mosaic/preprocessing/: contrast.html  derotation.html  noop.html  stiminterpolation.html
_modules/photon_mosaic/rules/: preprocessing.html  suite2p_run.html
_sources/: api_index.rst.txt  index.md.txt
_sources/api/: photon_mosaic.logging_config.rst.txt  photon_mosaic.paths_selection.rst.txt  photon_mosaic.preprocessing.stiminterpolation.rst.txt
api/: photon_mosaic.cli.html  photon_mosaic.logging_config.html  photon_mosaic.paths_selection.html  photon_mosaic.preprocessing.contrast.html  photon_mosaic.preprocessing.derotation.html  photon_mosaic.preprocessing.noop.html  photon_mosaic.preprocessing.stiminterpolation.html  photon_mosaic.rules.preprocessing.html  photon_mosaic.rules.suite2p_run.html  photon_mosaic.snakemake_utils.html
docs/: make_api_index.py
docs/source/: conf.py  contributing.md  index.md
docs/source/_static/css/: custom.css
docs/source/user_guide/: configuration.md  data_input.md  index.md  installation.md  postprocessing.md  preprocessing.md  snakemake_tutorial.md
photon_mosaic/: cli.py  paths_selection.py
photon_mosaic/preprocessing/: __init__.py  stiminterpolation.py
photon_mosaic/rules/: dff_run.py  neuropil_run.py  preprocessing.py  suite2p_run.py
photon_mosaic/workflow/: Snakefile  config.yaml  dff.smk  neuropil.smk  preprocessing.smk  suite2p.smk
photon_mosaic_pipeline/: __init__.py  cli.py  logging_config.py  snakemake_utils.py
photon_mosaic_pipeline/preprocessing/: __init__.py  contrast.py  derotation.py  noop.py  stiminterpolation.py
photon_mosaic_pipeline/rules/: __init__.py  preprocessing.py
photon_mosaic_pipeline/workflow/: Snakefile  config.yaml  preprocessing.smk  suite2p.smk
tests/: conftest.py  test_data_factory.py
tests/test_integration/: test_whole_workflow.py
tests/test_unit/: test_cli.py  test_dff_neuropil.py  test_paths_selection.py  test_stiminterpolation.py
user_guide/: configuration.html  data_input.html  index.html  installation.html  preprocessing.html  snakemake_tutorial.html
