[project]
name = "photon-mosaic-pipeline"
authors = [{name = "Laura Porta", email= "ucqflpo@ucl.ac.uk"}]
description = "Automating calcium imaging analysis"
readme = "README.md"
requires-python = ">=3.12.0"
dynamic = ["version"]

dependencies = [
  "snakemake",
  "numpy",
  "snakemake-executor-plugin-slurm",
  "PyYAML",
  "datashuttle",
  "derotation",
  "suite2p-NIU",
  "stiminterp"
]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
"Homepage" = "https://github.com/photon-mosaic/photon-mosaic-pipeline"
"Bug Tracker" = "https://github.com/photon-mosaic/photon-mosaic-pipeline/issues"
"Documentation" = "https://pipeline.photon-mosaic.org"

"Source Code" = "https://github.com/photon-mosaic/photon-mosaic-pipeline"
"User Support" = "https://github.com/photon-mosaic/photon-mosaic-pipeline/issues"

[project.scripts]
photon-mosaic-pipeline = "photon_mosaic_pipeline.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["photon_mosaic_pipeline*"]
exclude = ["tests", "docs*"]


[tool.pytest.ini_options]
addopts = "--cov=photon_mosaic_pipeline"
filterwarnings = [
    "error",
]

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
  "docs/",
  "docs/source/",
]


[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
lint.select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort
  # You can see what all the rules do here: https://docs.astral.sh/ruff/rules/
  # Some additional ruff rules that might be useful (uncomment to enable)
  #"UP",  # pyupgrade
  #"B",   # flake8 bugbear
  #"SIM", # flake8 simplify
  #"C90", # McCabe complexity
]
fix = true

[tool.ruff.format]
docstring-code-format = true # Also format code in docstrings (e.g. examples)

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311,312}
isolated_build = True

[gh-actions]
python =
    3.12: py312
    3.13: py313
    3.14: py314

[testenv]
deps =
    .[dev]
passenv =
    USERNAME
    CI
commands =
    pytest -v --color=yes --cov=photon_mosaic_pipeline --cov-report=xml
"""

[tool.codespell]
skip = '.git'
check-hidden = true
